log.txt
warning: unused imports: `marker::PhantomData` and `ops::Deref`
 --> som-value/src/value_ptr.rs:1:11
  |
1 | use std::{marker::PhantomData, ops::Deref};
  |           ^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `num_bigint::BigInt`
 --> som-value/src/value_ptr.rs:3:5
  |
3 | use num_bigint::BigInt;
  |     ^^^^^^^^^^^^^^^^^^

warning: `som-value` (lib) generated 2 warnings (run `cargo fix --lib -p som-value` to apply 2 suggestions)
warning: unused variable: `object`
  --> som-gc/src/slot.rs:92:21
   |
92 |     fn store(&self, object: ObjectReference) {
   |                     ^^^^^^ help: if this is intentional, prefix it with an underscore: `_object`
   |
   = note: `#[warn(unused_variables)]` on by default

warning: `som-gc` (lib) generated 1 warning
   Compiling som-interpreter-bc v0.1.0 (/Users/quentin/Code/som-rs/som-interpreter-bc)
warning: unused import: `value_enum`
 --> som-interpreter-bc/src/vm_objects/frame.rs:2:20
  |
2 | use crate::value::{value_enum, Value};
  |                    ^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `crate::value::value_enum::ValueEnum`
  --> som-interpreter-bc/src/vm_objects/frame.rs:13:5
   |
13 | use crate::value::value_enum::ValueEnum;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `Cell`
  --> som-interpreter-bc/src/compiler/compile.rs:11:17
   |
11 | use std::cell::{Cell, RefCell};
   |                 ^^^^

warning: unused import: `num_bigint::BigInt`
 --> som-interpreter-bc/src/hashcode.rs:6:5
  |
6 | use num_bigint::BigInt;
  |     ^^^^^^^^^^^^^^^^^^

warning: unused import: `som_gc::gcref::Gc`
 --> som-interpreter-bc/src/hashcode.rs:7:5
  |
7 | use som_gc::gcref::Gc;
  |     ^^^^^^^^^^^^^^^^^

warning: unused imports: `Literal` and `value_from_literal`
 --> som-interpreter-bc/src/interpreter.rs:1:23
  |
1 | use crate::compiler::{value_from_literal, Literal};
  |                       ^^^^^^^^^^^^^^^^^^  ^^^^^^^

warning: unused import: `crate::universe::Universe`
 --> som-interpreter-bc/src/interpreter.rs:2:5
  |
2 | use crate::universe::Universe;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `Block` and `CacheEntry`
 --> som-interpreter-bc/src/interpreter.rs:4:32
  |
4 | use crate::vm_objects::block::{Block, CacheEntry};
  |                                ^^^^^  ^^^^^^^^^^

warning: unused import: `crate::vm_objects::class::Class`
 --> som-interpreter-bc/src/interpreter.rs:5:5
  |
5 | use crate::vm_objects::class::Class;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::vm_objects::instance::Instance`
 --> som-interpreter-bc/src/interpreter.rs:7:5
  |
7 | use crate::vm_objects::instance::Instance;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `anyhow::Context`
 --> som-interpreter-bc/src/interpreter.rs:9:5
  |
9 | use anyhow::Context;
  |     ^^^^^^^^^^^^^^^

warning: unused import: `num_bigint::BigInt`
  --> som-interpreter-bc/src/interpreter.rs:15:5
   |
15 | use num_bigint::BigInt;
   |     ^^^^^^^^^^^^^^^^^^

warning: unused import: `som_value::interned::Interned`
  --> som-interpreter-bc/src/interpreter.rs:19:5
   |
19 | use som_value::interned::Interned;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused macro definition: `resolve_method_and_send`
  --> som-interpreter-bc/src/interpreter.rs:29:14
   |
29 | macro_rules! resolve_method_and_send {
   |              ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_macros)]` on by default

warning: unused macro definition: `profiler_maybe_start`
  --> som-interpreter-bc/src/interpreter.rs:39:14
   |
39 | macro_rules! profiler_maybe_start {
   |              ^^^^^^^^^^^^^^^^^^^^

warning: unused macro definition: `profiler_maybe_stop`
  --> som-interpreter-bc/src/interpreter.rs:49:14
   |
49 | macro_rules! profiler_maybe_stop {
   |              ^^^^^^^^^^^^^^^^^^^

warning: unused import: `bail`
 --> som-interpreter-bc/src/primitives/double.rs:8:14
  |
8 | use anyhow::{bail, Error};
  |              ^^^^

warning: unused import: `som_gc::gcslice::GcSlice`
 --> som-interpreter-bc/src/value/convert.rs:2:5
  |
2 | use som_gc::gcslice::GcSlice;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `som_gc::gcslice::GcSlice`
  --> som-interpreter-bc/src/value/idiomatic.rs:12:5
   |
12 | use som_gc::gcslice::GcSlice;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::value::value_ptr::TypedPtrValue`
  --> som-interpreter-bc/src/value/idiomatic.rs:13:5
   |
13 | use crate::value::value_ptr::TypedPtrValue;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::fmt`
  --> som-interpreter-bc/src/value/idiomatic.rs:31:5
   |
31 | use std::fmt;
   |     ^^^^^^^^

warning: unused imports: `Debug` and `Formatter`
  --> som-interpreter-bc/src/value/idiomatic.rs:32:16
   |
32 | use std::fmt::{Debug, Formatter};
   |                ^^^^^  ^^^^^^^^^

warning: unused import: `std::fmt`
  --> som-interpreter-bc/src/value/value_enum.rs:14:5
   |
14 | use std::fmt;
   |     ^^^^^^^^

warning: unused import: `crate::gc::VecValue`
 --> som-interpreter-bc/src/value/value_ptr.rs:1:5
  |
1 | use crate::gc::VecValue;
  |     ^^^^^^^^^^^^^^^^^^^

warning: unused import: `som_gc::gcslice::GcSlice`
  --> som-interpreter-bc/src/value/value_ptr.rs:16:5
   |
16 | use som_gc::gcslice::GcSlice;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^

error[E0599]: no method named `as_mut_ptr` found for reference `&Value` in the current scope
   --> som-interpreter-bc/src/gc.rs:120:51
    |
120 |         slot_visitor.visit_slot(SOMSlot::from(val.as_mut_ptr()))
    |                                                   ^^^^^^^^^^ method not found in `&Value`
    |
    = help: items from traits can only be used if the trait is implemented and in scope
    = note: the following trait defines an item `as_mut_ptr`, perhaps you need to implement it:
            candidate #1: `zerocopy::ByteSliceMut`

error[E0599]: no method named `as_mut_ptr` found for reference `&Value` in the current scope
   --> som-interpreter-bc/src/gc.rs:138:43
    |
138 |         to_process.push(SOMSlot::from(val.as_mut_ptr()))
    |                                           ^^^^^^^^^^ method not found in `&Value`
    |
    = help: items from traits can only be used if the trait is implemented and in scope
    = note: the following trait defines an item `as_mut_ptr`, perhaps you need to implement it:
            candidate #1: `zerocopy::ByteSliceMut`

For more information about this error, try `rustc --explain E0599`.
warning: `som-interpreter-bc` (lib) generated 25 warnings
error: could not compile `som-interpreter-bc` (lib) due to 2 previous errors; 25 warnings emitted
